# ece208

./: .gitignore  Pipfile  bisection.ipynb  ece202.ipynb  final.ipynb  final_sample.ipynb  gauss_seidel.ipynb  homework.ipynb  interpolation.ipynb  main.py  midterm.ipynb  midterm_part1.ipynb  midterm_part2.ipynb  newton.ipynb  newton_interpolation.ipynb  pyproject.toml  quiz.ipynb  secant.ipynb  util.py
evaluator/: __init__.py  errors.py  expression.py  function.py  lexer.py  operation.py  parser.py  token.py  util.py
numan/: interpolation.py  methods.py  util.py
