[tool.poetry]
name = "ece208"
version = "0.1.0"
description = ""
authors = ["Rinald Shabani <rinaldshabani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
notebook = "^6.0.3"
jupyter = "^1.0.0"
numpy = "^1.18.2"
matplotlib = "^3.2.1"
sympy = "^1.5.1"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
pylint = "^2.4.4"
pycodestyle = "^2.6.0a1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
